Refactored agent startup scripts